refactor: add get recipe by id
